--- a/src/app/common/nav-menu/nav-menu.component.scss
+++ b/src/app/common/nav-menu/nav-menu.component.scss
@@ -55,24 +55,28 @@
     }
 
     .navbar-menu {
-      display: block;
-      visibility: hidden;
-      opacity: 0;
-      z-index: -1;
-      height: 0;
-      max-height: 0;
-      padding: 0;
-      overflow: hidden;
-      transition: max-height $animationSpeed3 $animationF0;
+      @media screen and (max-width: 1087px) {
+        display: block;
+        visibility: hidden;
+        opacity: 0;
+        z-index: -1;
+        height: 0;
+        max-height: 0;
+        padding: 0;
+        overflow: hidden;
+        transition: max-height $animationSpeed3 $animationF0;
+      }
 
       &.is-active {
-        visibility: visible;
-        opacity: 1;
-        z-index: 9;
-        height: auto;
-        max-height: 60vh;
-        padding: 0.5rem 0;
-        overflow: auto;
+        @media screen and (max-width: 1087px) {
+          visibility: visible;
+          opacity: 1;
+          z-index: 9;
+          height: auto;
+          max-height: 60vh;
+          padding: 0.5rem 0;
+          overflow: auto;
+        }
       }
       &.center {
         justify-content: center;
