#4 - Add slack logo / text / link in the footer | some fixes in footer icons - translate strings update

--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -3,14 +3,14 @@
   <p>
     {{ 'FOOTER.SOCIAL.MSG' | translate }}
   </p>
-  <div class="columns is-mobile">
-    <a href="https://facebook.com/andalugeeks" target="_blank" class="column">
+  <div>
+    <a href="https://facebook.com/andalugeeks" target="_blank">
       <img src='./assets/imgs/footer/facebook.png' />
     </a>
-    <a href="https://instagram.com/andalugeeks" target="_blank"  class="column">
+    <a href="https://instagram.com/andalugeeks" target="_blank">
       <img src='./assets/imgs/footer/instagram.png' />
     </a>
-    <a href="https://twitter.com/andalugeeks" target="_blank"  class="column">
+    <a href="https://twitter.com/andalugeeks" target="_blank">
       <img src='./assets/imgs/footer/twitter.png' />
     </a>
   </div>
@@ -20,7 +20,12 @@
   <p>
     {{ 'FOOTER.OPEN_SOURCE.MSG' | translate }}
   </p>
-  <a href="https://github.com/andalugeeks" target="_blank">
-    <img src='./assets/imgs/footer/github.png' />
-  </a>
+  <div>
+    <a href="https://github.com/andalugeeks" target="_blank">
+      <img src='./assets/imgs/footer/github.png' />
+    </a>
+    <a href="https://join.slack.com/t/andalugeeks/shared_invite/enQtNTYzMjk2NDYxMzQ4LTFiYzNhNDA0MmI2YTIzZjAwODU1ODAyNzE5Yjg1OTk5MzVmODVhZTQ2YTllYWY5NmY5YmM0NGZmYmU2MDU4ZWI" target="_blank" >
+      <img src='./assets/imgs/footer/slack.png' />
+    </a>
+  </div>
 </div>
