Add telegram and whatsapp share buttons

--- a/src/app/transcriptor/transcriptor.component.html
+++ b/src/app/transcriptor/transcriptor.component.html
@@ -80,6 +80,12 @@
             <div class="twitter-wrapper">
                 <div class="share-icon twitter-link" (click)="shareTwitter()"></div>
             </div>
+            <div class="telegram-wrapper">
+                <div class="share-icon telegram-link" (click)="shareTelegram()"></div>
+            </div>
+            <div class="whatsapp-wrapper">
+                <div class="share-icon whatsapp-link" (click)="shareWhatsapp()"></div>
+            </div>
         </div>
     </div>
 </div>
