Adding youtube icon to social networks footer block

--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -13,6 +13,9 @@
     <a href="https://twitter.com/andalugeeks" target="_blank">
       <img src='./assets/imgs/footer/twitter.png' />
     </a>
+    <a href="https://www.youtube.com/channel/UCLx2_ohzphAKX0_a6AfsbPA" target="_blank">
+      <img src='./assets/imgs/footer/youtube.png' />
+    </a>
   </div>
 </div>
 <div class="block content">
