Adding new footer block (apps) and opensource new icons

--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -1,4 +1,28 @@
 <div class="block content">
+  <h2>{{ 'FOOTER.APPS.HEADLINE' | translate }}</h2>
+  <p>
+    {{ 'FOOTER.APPS.MSG' | translate }}
+  </p>
+  <div>
+    <!-- Ready for the next launching! -->
+    <!--<a href="https://wiki.andaluh.es" target="_blank">
+      <img src='./assets/imgs/footer/andaluwiki.png' />
+    </a>-->
+    <a href="https://play.google.com/store/apps/details?id=es.andaluh.transcriptor" target="_blank">
+      <img src='./assets/imgs/footer/android.png' />
+    </a>
+    <a href="https://www.microsoft.com/es-es/p/tr%C3%A2ccr%C3%AEtt%C3%B4h-andal%C3%BBh/9p73tzj7hz8j" target="_blank">
+      <img src='./assets/imgs/footer/windows.png' />
+    </a>
+    <a href="https://github.com/andalugeeks/andaluh-electron/releases" target="_blank">
+      <img src='./assets/imgs/footer/linux.png' />
+    </a>
+    <a href="https://t.me/andalubot" target="_blank">
+      <img src='./assets/imgs/footer/telegram.png' />
+    </a>
+  </div>
+</div>
+<div class="block content">
   <h2>{{ 'FOOTER.SOCIAL.HEADLINE' | translate }}</h2>
   <p>
     {{ 'FOOTER.SOCIAL.MSG' | translate }}
@@ -29,6 +53,15 @@
     </a>
     <a href="https://join.slack.com/t/andalugeeks/shared_invite/enQtNTYzMjk2NDYxMzQ4LTFiYzNhNDA0MmI2YTIzZjAwODU1ODAyNzE5Yjg1OTk5MzVmODVhZTQ2YTllYWY5NmY5YmM0NGZmYmU2MDU4ZWI" target="_blank" >
       <img src='./assets/imgs/footer/slack.png' />
+    </a>
+    <a href="https://pypi.org/project/andaluh/" target="_blank">
+      <img src='./assets/imgs/footer/pypi.png' />
+    </a>
+    <a href="https://www.npmjs.com/package/@andalugeeks/andaluh" target="_blank">
+      <img src='./assets/imgs/footer/npmjs.png' />
+    </a>
+    <a href="https://www.nuget.org/packages/Andaluh/" target="_blank">
+      <img src='./assets/imgs/footer/nuget.png' />
     </a>
   </div>
 </div>
