Translation sharing function modal message wording improved.

--- a/src/app/transcriptor/transcriptor.component.html
+++ b/src/app/transcriptor/transcriptor.component.html
@@ -72,6 +72,9 @@
     <div class="modal-content">
         <div class="modal-header">
             <h2>{{share_text.share | translate}}</h2>
+            <br>
+            <p>{{share_text.msg | translate}}</p>
+            <hr>
         </div>
         <div class="modal-body">
             <div class="facebook-wrapper">
