Included icon to teclao andaluh.

--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -8,6 +8,9 @@
     <!--<a href="https://wiki.andaluh.es" target="_blank">
       <img src='./assets/imgs/footer/andaluwiki.png' />
     </a>-->
+    <a href="https://andaluh.es/es/teclado-andaluz" target="_blank">
+      <img src='./assets/imgs/footer/teclao.png' />
+    </a>
     <a href="https://play.google.com/store/apps/details?id=es.andaluh.transcriptor" target="_blank">
       <img src='./assets/imgs/footer/android.png' />
     </a>
