Added AndaluWiki icon

--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -4,10 +4,9 @@
     {{ 'FOOTER.APPS.MSG' | translate }}
   </p>
   <div>
-    <!-- Ready for the next launching! -->
-    <!--<a href="https://wiki.andaluh.es" target="_blank">
+    <a href="https://wiki.andaluh.es" target="_blank">
       <img src='./assets/imgs/footer/andaluwiki.png' />
-    </a>-->
+    </a>
     <a href="https://andaluh.es/es/teclado-andaluz" target="_blank">
       <img src='./assets/imgs/footer/teclao.png' />
     </a>
