Updated telegram channel link

--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -19,7 +19,7 @@
     <a href="https://github.com/andalugeeks/andaluh-electron/releases" target="_blank">
       <img src='./assets/imgs/footer/linux.png' />
     </a>
-    <a href="https://t.me/andalubot" target="_blank">
+    <a href="https://t.me/aprendeandaluh" target="_blank">
       <img src='./assets/imgs/footer/telegram.png' />
     </a>
   </div>
